--- a/templates.yaml
+++ b/templates.yaml
@@ -10,10 +10,10 @@ types: [int,float,string,list] # and later we'll meet tuple,color,method
 classes:
 
   _header : |
-      Reactorg
+      Your project
       @author: you
       @licence : GPL
-      Date:<2017/12/01 23:59:33>
+      Date:<2017/12/02 00:00:18>
       generated with Genclass alpha
 
       {name}
